--- a/record_voice_android_app/app/src/main/res/values/strings.xml
+++ b/record_voice_android_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">RecordVoiceApp</string>
+    <string name="app_name">RecordSoundAndText</string>
 </resources>
